--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "homepage": "https://github.com/flowtsohg/mdx-m3-viewer#readme",
   "dependencies": {
     "fengari": "^0.1.4",
+    "file-saver": "^2.0.5",
     "gl-matrix": "3.3.0",
+    "mdx-m3-viewer": "^5.12.0",
     "pako": "^2.0.3",
     "tga-js": "^1.1.1"
   },
