--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "target": "es2017",
-    "lib": ["es2020", "dom"],
+  "compilerOptions": {    "module": "ESNext",
+  "target": "ESNext",
+  "lib": [
+    "es2020",
+    "dom"
+  ],
     "outDir": "./dist/cjs",
     "moduleResolution": "node",
     "typeRoots": ["./types", "./node_modules/@types"],
@@ -15,9 +17,9 @@
     "noImplicitOverride": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
-    "noImplicitReturns": true,
+    //"noImplicitReturns": true,
     "noPropertyAccessFromIndexSignature": true,
-    "suppressImplicitAnyIndexErrors": true
+    //"suppressImplicitAnyIndexErrors": true
   },
   "exclude": ["clients", "clean.js", "webpack.config.js", "dist"]
 }
